Disable/Hide all options for Wi-fi

--- a/customisations.cfg
+++ b/customisations.cfg
@@ -3,7 +3,7 @@
 <!-- =========================================================================================== -->
 <!-- customisations.cfg file, from https://greiginsydney.com/optimising-the-polycom-vvx-for-lync -->
 <!-- ================== Also https://github.com/greiginsydney/000000000000.cfg ================= -->
-<!-- ====================== This version last revised 2nd Feb 2019 ============================= -->
+<!-- ====================== This version last revised 29th March 2019 ========================== -->
 <!-- ====== Delete all the comments from your final config file for network efficiencies! ====== -->
 <!-- =========================================================================================== -->
 <customisations>
@@ -72,6 +72,7 @@
 	homeScreen.status.enable="1"
 	homeScreen.forward.enable="0"
 	homeScreen.doNotDisturb.enable="0"
+	homeScreen.wifi.enable="0"
 	/>
 
 	<!-- Align softkeys with home-screen. Disabling here removes ALL references everywhere -->
@@ -129,6 +130,12 @@
   <log log.render.level="6" log.render.file.upload.append.sizeLimit="128" />
   <!-- We definitely don't want call recording on! -->
   <feature feature.callRecording.enabled="0" />
+  
+  <!-- Hide the Wifi option (new in 5.9.0) -->
+  <feature feature.wifi.basicMenu.enable="0" />
+  <!-- Hide the Wifi option - delete the above and use this instead for v6.0+ -->
+  <feature feature.wifi.visibilityInMenus.enable="0" />
+  
   <!-- Tweak the QoS values & RTP media port as required -->
   <qos qos.ethernet.tcpQosEnabled="1" qos.ethernet.callControl.user_priority="5" qos.ethernet.other.user_priority="2" qos.ethernet.rtp.user_priority="2" qos.ethernet.rtp.video.user_priority="5" qos.ip.callControl.dscp="40" qos.ip.rtp.dscp="46" qos.ip.rtp.video.dscp="34" />
   <tcpIpApp tcpIpApp.port.rtp.mediaPortRangeStart="5350" tcpIpApp.port.rtp.mediaPortRangeEnd = "5390" tcpIpApp.port.rtp.videoPortRange.enable="1" tcpIpApp.port.rtp.videoPortRangeStart="5391" tcpIpApp.port.rtp.videoPortRangeEnd="5430" />
