--- a/trio-usb.cfg
+++ b/trio-usb.cfg
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <polycomConfig xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="Config/polycomConfig.xsd">
   <!-- =========================================================================================== -->
-  <!-- ================= trio-usb.cfg file, from https://greiginsydney.com/ TBA ================== -->
-  <!-- ======================= This version last updated 18th August 2018 ======================== -->
+  <!-- =================== trio-usb.cfg file, from https://greiginsydney.com ===================== -->
+  <!-- ==================== https://github.com/greiginsydney/000000000000.cfg ==================== -->
+  <!-- ======================= This version last updated 8th April 2019 ========================== -->
   <!-- =========================================================================================== -->
   <customisations>
     <!-- Set the Base Profile to SfB *USB mode* -->
@@ -20,7 +21,7 @@
     <sec sec.pwd.length.admin="3" sec.pwd.length.user="3" sec.tagSerialNo="1" />
     <!-- Customise the Admin Password to your own environment: -->
     <device device.auth.localAdminPassword="4566" device.auth.localAdminPassword.set="1" />
-    <device device.prov.tagSerialNo="1" />
+    <device device.prov.tagSerialNo="1" device.prov.tagSerialNo="1" />
     <!-- Automatic overnight config checks (improves device security) -->
     <prov prov.polling.enabled="1" prov.polling.mode="random" prov.polling.period="86400" prov.polling.time="01:00" prov.polling.timeRandomEnd="05:00" />
     <VoIpProt voIpProt.SIP.specialEvent.checkSync.alwaysReboot="1" />
