--- a/customisations.cfg
+++ b/customisations.cfg
@@ -3,7 +3,7 @@
 <!-- =========================================================================================== -->
 <!-- customisations.cfg file, from https://greiginsydney.com/optimising-the-polycom-vvx-for-lync -->
 <!-- ================== Also https://github.com/greiginsydney/000000000000.cfg ================= -->
-<!-- ====================== This version last revised 29th March 2019 ========================== -->
+<!-- ======================= This version last revised 8th April 2019 ========================== -->
 <!-- ====== Delete all the comments from your final config file for network efficiencies! ====== -->
 <!-- =========================================================================================== -->
 <customisations>
@@ -121,7 +121,7 @@
   <sec sec.pwd.length.admin="3" sec.pwd.length.user="3" sec.tagSerialNo="1" />
   <!-- Customise the Admin Password to your own environment: -->
   <device device.auth.localAdminPassword="4566" device.auth.localAdminPassword.set="1" />
-  <device device.prov.tagSerialNo="1" />
+  <device device.prov.tagSerialNo="1" device.prov.tagSerialNo.set="1" />
   <!-- Automatic overnight config checks (improves device security) -->
   <prov prov.polling.enabled="1" prov.polling.mode="random" prov.polling.period="86400" prov.polling.time="01:00" prov.polling.timeRandomEnd="05:00" />
   <!-- a "1" here will enable a Sysadmin to force a reboot remotely -->
