--- a/trio-usb.cfg
+++ b/trio-usb.cfg
@@ -21,7 +21,7 @@
     <sec sec.pwd.length.admin="3" sec.pwd.length.user="3" sec.tagSerialNo="1" />
     <!-- Customise the Admin Password to your own environment: -->
     <device device.auth.localAdminPassword="4566" device.auth.localAdminPassword.set="1" />
-    <device device.prov.tagSerialNo="1" device.prov.tagSerialNo="1" />
+    <device device.prov.tagSerialNo="1" device.prov.tagSerialNo.set="1" />
     <!-- Automatic overnight config checks (improves device security) -->
     <prov prov.polling.enabled="1" prov.polling.mode="random" prov.polling.period="86400" prov.polling.time="01:00" prov.polling.timeRandomEnd="05:00" />
     <VoIpProt voIpProt.SIP.specialEvent.checkSync.alwaysReboot="1" />
