Updated, adding SA & minor tweaks:
- changed two "override" values to a "1". I figure if we're providing the new values for an sntp.address & sntp.gmtOffset, override should be a 1.

--- a/AU-DST.cfg
+++ b/AU-DST.cfg
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <polycomConfig xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="Config/polycomConfig.xsd">
 <dst>
-<!-- NTP & Daylight Saving : These values are applicable to NSW, ACT, VIC & TAS. -->
+<!-- NTP & Daylight Saving : These values are applicable to NSW, ACT, VIC, TAS & SA. -->
   <!-- Don't forget to set the correct CityID! https://greiginsydney.com/polycom-vvx-trio-time-zone-location-description/ -->
   <tcpIpApp>
     <tcpIpApp.sntp>
-	  <tcpIpApp.sntp tcpIpApp.sntp.gmtOffsetcityID="113" /> 
-      <tcpIpApp.sntp.address tcpIpApp.sntp.address="#YourSntpIp#" tcpIpApp.sntp.address.overrideDHCP="0" />
+	  <tcpIpApp.sntp tcpIpApp.sntp.gmtOffsetcityID="#YourCityID#" /> 
+      <tcpIpApp.sntp.address tcpIpApp.sntp.address="#YourSntpIp#" tcpIpApp.sntp.address.overrideDHCP="1" />
       <tcpIpApp.sntp.daylightSavings tcpIpApp.sntp.daylightSavings.enable="1" tcpIpApp.sntp.daylightSavings.fixedDayEnable="0">
         <tcpIpApp.sntp.daylightSavings.start tcpIpApp.sntp.daylightSavings.start.date="1" tcpIpApp.sntp.daylightSavings.start.dayOfWeek="1" tcpIpApp.sntp.daylightSavings.start.month="10" tcpIpApp.sntp.daylightSavings.start.time="2">
           <tcpIpApp.sntp.daylightSavings.start.dayOfWeek tcpIpApp.sntp.daylightSavings.start.dayOfWeek.lastInMonth="0" />
@@ -15,7 +15,8 @@
           <tcpIpApp.sntp.daylightSavings.stop.dayOfWeek tcpIpApp.sntp.daylightSavings.stop.dayOfWeek.lastInMonth="0" />
         </tcpIpApp.sntp.daylightSavings.stop>
       </tcpIpApp.sntp.daylightSavings>
-      <tcpIpApp.sntp.gmtOffset tcpIpApp.sntp.gmtOffset.overrideDHCP="0" tcpIpApp.sntp.gmtOffset="36000" tcpIpApp.sntp.resyncPeriod="86400" />
+      <!-- Offset is 36000 in the Eastern states & 32400 in SA -->
+      <tcpIpApp.sntp.gmtOffset tcpIpApp.sntp.gmtOffset.overrideDHCP="1" tcpIpApp.sntp.gmtOffset="36000" tcpIpApp.sntp.resyncPeriod="86400" />
     </tcpIpApp.sntp>
   </tcpIpApp>
   
